--- a/card.html
+++ b/card.html
@@ -63,7 +63,7 @@ H1{
     <div班级="消息" 身份标识="消息">🎅 祝你节日快乐，心想事成！ 🎅</div>
     <! -- 背景音乐 -->
     <音频身份标识="bg-音乐" 环>
-        <来源src="TheLonelygirl.mp3" 类型="音频/mpeg">
+        <来源src="music/TheLonelygirl.mp3" 类型="音频/mpeg">
         <来源src="Path/to/your-Telelygirl.ogg" 类型="音频/ogg">
 您的浏览器不支持音乐播放。
     </音频>
