--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ H1{
     <! -- 背景音乐 -->
     <音频身份标识="bg-音乐" 环>
         <来源src="music/TheLonelygirl.mp3" 类型="音频/mpeg">
-        <来源src="Path/to/your-music/Telelygirl.ogg" 类型="音频/ogg">
+        <来源src="music/Telelygirl.ogg" 类型="音频/ogg">
 您的浏览器不支持音乐播放。
     </音频>
 
