--- a/index.html
+++ b/index.html
@@ -62,10 +62,9 @@
     <!-- 个性化留言 -->
     <div class="message" id="message">🎅 祝你节日快乐，心想事成！ 🎅</div>
     <!-- 背景音乐 -->
-    <audio id="bg-music" loop>
-        <source src="music/TheLonelygirl.mp3" type="audio/mpeg">
-        <source src="path/to/your-music/TheLonelygirl.ogg" type="audio/ogg">
-        您的浏览器不支持音乐播放。
+        <audio id="bg-music" loop>
+    <source src="music/TheLonelygirl.mp3" type="audio/mpeg">
+    您的浏览器不支持音乐播放。
     </audio>
 
     <script>
@@ -83,7 +82,7 @@
                     console.log("音乐播放失败:", error);
                 });
                 message.style.display = 'block'; // 显示消息
-                message.textContent = "🎁 亲爱的［bro］，祝你圣诞快乐，愿你岁月无忧！ 🎄";
+                message.textContent = "🎁 亲爱的兄弟，祝你圣诞快乐，愿你岁月无忧！ 🎄";
             }
             
             isPlaying = !isPlaying; // 切换播放状态
