--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="message" id="message">🎅 祝你节日快乐，心想事成！ 🎅</div>
     <!-- 背景音乐 -->
         <audio id="bg-music" loop>
-    <source src="music/TheLonelygirl.mp3" type="audio/mpeg">
+    <source src="music/Laoluns.mp3" type="audio/mpeg">
     您的浏览器不支持音乐播放。
     </audio>
 
@@ -82,7 +82,7 @@
                     console.log("音乐播放失败:", error);
                 });
                 message.style.display = 'block'; // 显示消息
-                message.textContent = "🎁 亲爱的兄弟，祝你圣诞快乐，愿你岁月无忧！ 🎄";
+                message.textContent = "🎁 亲爱的阿妹，祝你圣诞快乐，愿你永远做自己的小太阳！ 🎄";
             }
             
             isPlaying = !isPlaying; // 切换播放状态
