--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     console.log("音乐播放失败:", error);
                 });
                 message.style.display = 'block'; // 显示消息
-                message.textContent = "🎁 亲爱的阿妹，祝你圣诞快乐，愿你永远做自己的小太阳！ 🎄";
+                message.textContent = "🎁 亲爱的阿妹，祝你圣诞快乐，愿你永远做自己的小太阳！ 🌞";
             }
             
             isPlaying = !isPlaying; // 切换播放状态
